[package]
name = "docker-images"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true

[[bin]]
name = "ddocker"
path = "src/bin/ddocker.rs"

[[bin]]
name = "code"
path = "src/bin/code.rs"

[dependencies]
clap = { version = "3.2.18", features = ["cargo"] }
regex = "1.6.0"
glob = "0.3.0"
inquire = "0.3.0"
