[package]
name = "docker-images"
version = "1.0.0"
edition = "2021"
publish = false

[profile.release]
strip = true

[[bin]]
name = "build-readme"
path = "src/bin/build-readme.rs"

[[bin]]
name = "entrypoint"
path = "src/bin/entrypoint.rs"

[[bin]]
name = "ddocker"
path = "src/bin/ddocker.rs"

[[bin]]
name = "code"
path = "src/bin/code.rs"

[[bin]]
name = "node-parser"
path = "src/parsers/node.rs"

[dependencies]
clap = { version = "3.2.18", features = ["cargo"] }
regex = "1.6.0"
glob = "0.3.0"
inquire = "0.3.0"
serde_json = "1.0.85"
semver = "1.0.13"
shellwords = "1.1.0"
